--- a/index.html
+++ b/index.html
@@ -16,11 +16,18 @@
 		a:hover {
 			text-decoration: underline;
 		}
+		.test a {
+			color: gray;
+		}
+		.mt {
+			margin-top: 2em;
+		}
 	</style>
 </head>
 <body>
 	<ul>
 		<li><a href="./Task1">Задание 1: "Современный CSS"</a></li>
+		<li class="test mt"><a href="./test">Тест: "Список с маркерами-картинками"</a></li>
 	</ul>
 </body>
 </html>
