Task 1: Correct mistakes 2

--- a/Task1/index.html
+++ b/Task1/index.html
@@ -8,94 +8,96 @@
 </head>
 <body>
 	<main class="main">
-		<header class="header">
-			<a href="https://ya.ru/" target="_blank">
-				<img class="header__img" src="./imgs/Ya-logo.svg" alt="Logo">
-			</a>
-		</header>
-		<article class="article">
-			<section class="section">
-				<div class="input">
-					<input class="input__input" type="text" placeholder="Найдётся всё">
-					<button class="input__button">Найти</button>
-				</div>
+		<section class="page-404">
+			<section class="page-404__content">
+				<header class="page-404__header">
+					<a href="https://ya.ru/" target="_blank">
+						<img class="header__img" src="./imgs/Ya-logo.svg" alt="Logo">
+					</a>
+				</header>
+				<article class="page-404__article">
+					<section class="article__section article__search">
+						<input class="search__input" type="text" placeholder="Найдётся всё">
+						<button class="search__button">Найти</button>
+					</section>
+					<section class="article__section">
+						<h1 class="article__h1">Ошибка 404. Нет такой страницы</h1>
+						<p class="article__p">
+							<span>Если вы считаете, что страницы нет по нашей вине,</span>
+							<a class="link" href="https://yandex.ru/support/not-found/" target="_blank">напишите нам</a>.
+						</p>
+					</section>
+					<section class="article__section">
+						<ul class="article__links">
+							<li class="links__item">
+								<a class="link" href="https://market.yandex.ru/" target="_blank">
+									<span class="links__icon">
+										<img class="icon__img" src="./imgs/market.svg" alt="Icon">
+									</span>
+									<span>Маркет</span>
+								</a>
+								<span>— смартфоны Huawei</span>
+							</li>
+							<li class="links__item">
+								<a class="link" href="https://plus.yandex.ru/" target="_blank">
+									<span class="links__icon">
+										<img class="icon__img" src="./imgs/plus.svg" alt="Icon">
+									</span>
+									<span>Плюс</span>
+								</a>
+								<span>— теперь и для семьи</span>
+							</li>
+							<li class="links__item">
+								<a class="link" href="https://music.yandex.ru/" target="_blank">
+									<span class="links__icon">
+										<img class="icon__img" src="./imgs/music.svg" alt="Icon">
+									</span>
+									<span>Музыка</span>
+								</a>
+								<span>— подкасты где угодно</span>
+							</li>
+							<li class="links__item">
+								<a class="link" href="https://kinopoisk.ru/" target="_blank">
+									<span class="links__icon">
+										<img class="icon__img" src="./imgs/kinopoisk.svg" alt="Icon">
+									</span>
+									<span>Кинопоиск</span>
+								</a>
+								<span>— «Нулевой пациент»</span>
+							</li>
+							<li class="links__item">
+								<a class="link" href="https://praktikum.yandex.ru/" target="_blank">
+									<span class="links__icon">
+										<img class="icon__img" src="./imgs/praktikum.svg" alt="Icon">
+									</span>
+									<span>Практикум</span>
+								</a>
+								<span>— стать аналитиком</span>
+							</li>
+							<li class="links__item">
+								<a class="link" href="https://edadeal.ru/" target="_blank">
+									<span class="links__icon">
+										<img class="icon__img" src="./imgs/edadeal.svg" alt="Icon">
+									</span>
+									<span>Едадил</span>
+								</a>
+								<span>— скидки в супермаркетах</span>
+							</li>
+							<li class="links__item">
+								<a class="link" href="http://toloka.yandex.ru/" target="_blank">
+									<span class="links__icon">
+										<img class="icon__img" src="./imgs/toloka.svg" alt="Icon">
+									</span>
+									<span>Толока</span>
+								</a>
+								<span>— удалённый заработок</span>
+							</li>
+						</ul>
+					</section>
+				</article>
 			</section>
-			<section class="section">
-				<h1 class="h1">Ошибка 404. Нет такой страницы</h1>
-				<p class="p">
-					<span>Если вы считаете, что страницы нет по нашей вине,</span>
-					<a class="link" href="https://yandex.ru/support/not-found/" target="_blank">напишите нам</a>.
-				</p>
-			</section>
-			<section class="section">
-				<ul class="links">
-					<li class="links__item">
-						<a class="link" href="https://market.yandex.ru/" target="_blank">
-							<span class="icon">
-								<img class="icon__img" src="./imgs/market.svg" alt="Icon">
-							</span>
-							<span>Маркет</span>
-						</a>
-						<span>— смартфоны Huawei</span>
-					</li>
-					<li class="links__item">
-						<a class="link" href="https://plus.yandex.ru/" target="_blank">
-							<span class="icon">
-								<img class="icon__img" src="./imgs/plus.svg" alt="Icon">
-							</span>
-							<span>Плюс</span>
-						</a>
-						<span>— теперь и для семьи</span>
-					</li>
-					<li class="links__item">
-						<a class="link" href="https://music.yandex.ru/" target="_blank">
-							<span class="icon">
-								<img class="icon__img" src="./imgs/music.svg" alt="Icon">
-							</span>
-							<span>Музыка</span>
-						</a>
-						<span>— подкасты где угодно</span>
-					</li>
-					<li class="links__item">
-						<a class="link" href="https://kinopoisk.ru/" target="_blank">
-							<span class="icon">
-								<img class="icon__img" src="./imgs/kinopoisk.svg" alt="Icon">
-							</span>
-							<span>Кинопоиск</span>
-						</a>
-						<span>— «Нулевой пациент»</span>
-					</li>
-					<li class="links__item">
-						<a class="link" href="https://praktikum.yandex.ru/" target="_blank">
-							<span class="icon">
-								<img class="icon__img" src="./imgs/praktikum.svg" alt="Icon">
-							</span>
-							<span>Практикум</span>
-						</a>
-						<span>— стать аналитиком</span>
-					</li>
-					<li class="links__item">
-						<a class="link" href="https://edadeal.ru/" target="_blank">
-							<span class="icon">
-								<img class="icon__img" src="./imgs/edadeal.svg" alt="Icon">
-							</span>
-							<span>Едадил</span>
-						</a>
-						<span>— скидки в супермаркетах</span>
-					</li>
-					<li class="links__item">
-						<a class="link" href="http://toloka.yandex.ru/" target="_blank">
-							<span class="icon">
-								<img class="icon__img" src="./imgs/toloka.svg" alt="Icon">
-							</span>
-							<span>Толока</span>
-						</a>
-						<span>— удалённый заработок</span>
-					</li>
-				</ul>
-			</section>
-		</article>
-	</div>
+		</section>
+	</main>
 	<footer class="footer">
 		<nav class="footer__nav">
 			<a class="link footer__link" href="https://yandex.ru/company/" target="_blank">Компания</a>
