--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 </head>
 <body>
 	<ul>
-		<li><a href="./Task1">Задание 1: "Современный CSS"</a></li>
+		<li><a href="./Task1">Задание "Современный CSS"</a></li>
+		<li><a href="./Task2/wwwroot/page1/">Задание "Основы React" - страница 1</a></li>
+		<li><a href="./Task2/wwwroot/page2/">Задание "Основы React" - страница 2</a></li>
 		<li class="test mt"><a href="./test">Тест: "Список с маркерами-картинками"</a></li>
 	</ul>
 </body>
