--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<li><a href="./Task1/index.html">Задание "Современный CSS"</a></li>
 		<li><a href="./Task2/wwwroot/page1/index.html">Задание "Основы React" - страница 1</a></li>
 		<li><a href="./Task2/wwwroot/page2/index.html">Задание "Основы React" - страница 2</a></li>
-		<li class="test mt"><a href="./test">Тест: "Список с маркерами-картинками"</a></li>
+		<li class="test mt"><a href="./Test/index.html">Тест: "Список с маркерами-картинками"</a></li>
 	</ul>
 </body>
 </html>
